{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Horizontal",
            "id": "691d2ed6-9785-44cc-abe8-74332612e0cb",
            "actions": [
                {
                    "name": "HorizontalMove",
                    "type": "Value",
                    "id": "a16e13ce-316e-4172-bde8-6fec8a865179",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShootMovement",
                    "type": "Value",
                    "id": "e1d83ea8-eb6f-435c-9737-f3a217964b2c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DashButton",
                    "type": "Button",
                    "id": "c734954a-6c5c-433b-897f-453b0f5341df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootButton",
                    "type": "Button",
                    "id": "4b5a07f7-8599-4812-891e-32358c4462ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "HorizontalMove",
                    "id": "b4accdeb-5334-44e7-8c57-e0669f2b3a3c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "45c9039a-e013-488b-8eb3-1c681ef1ed06",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "26eddadc-94ca-4cd8-9176-3fa56e784072",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1a3bfd13-ae00-4459-8344-896ab8f415e1",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5ea5727-783d-4b91-a71f-83c60f45b91e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "822456ff-6bc7-4c3e-bfaf-3b5f343de3e6",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5670b511-cbdf-4ed2-826c-1fc342a4a02f",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}